task-2 alignment correction

--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 #main-container {
   background-color: #d2d9e9;
-  height: 300px;
+  height: 250px;
   margin: 15px;
   padding: 15px;
   display: flex;
